[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
nanoid = "0.4.0"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
ureq = { version = "2.9.6", features = ["gzip"] }
futures-util = "0.3.30"
fantoccini = "0.19.3"
thirtyfour = "0.31.0"
reqwest = "0.12.2"
sha256 = "1.5.0"
url = "2.5.0"
httpdate = "1.0.3"
indexmap = { version = "2.2.6", features = ["serde"] }
inquire = "0.7.4"
counter = "0.5.7"
