[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
futures-util = "0.3.30"
fantoccini = "0.19.3"
reqwest = "0.12.2"
sha256 = "1.5.0"
url = "2.5.0"
httpdate = "1.0.3"
indexmap = { version = "2.2.6", features = ["serde"] }
inquire = "0.7.4"
counter = "0.5.7"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"] }
serde_repr = "0.1.18"
serde_with = { version = "3.7.0", features = ["chrono"] }
typed_floats = { version = "1.0.1", features = ["serde"] }
indicatif = "0.17.8"
rayon = "1.10.0"
itertools = "0.12.1"
