[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
geo = { version = "0.28.0", features = ["use-serde"] }
indicatif = "0.17.8"
itertools = "0.12.1"
postcard = { version = "1.0.8", features = ["alloc"] }
rayon = "1.10.0"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
serde_with = "3.7.0"
serde_yaml = "0.9.34"
typed_floats = { version = "1.0.1", features = ["serde"] }
ureq = { version = "2.9.6", features = ["json"] }
zstd = "0.13.1"
