[package]
name = "prices"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
itertools = "0.12.1"
postcard = { version = "1.0.8", features = ["alloc"] }
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
typed_floats = { version = "1.0.1", features = ["serde"] }
zstd = "0.13.1"
