[package]
name = "stores"
version = "0.1.0"
edition = "2021"

[dependencies]
_model = { path = "../model" }
anyhow = "1.0.82"
geo = { version = "0.28.0", features = ["use-serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
terminal-link = "0.1.0"
ureq = { version = "2.9.6", features = ["json"] }

